Проблемы с DAL, библиотека не core и нет возможности подключить entity core, решил перенести слой DAL на консольку

--- a/BulletinBoard/BulletinBoard.DAL.csproj
+++ b/BulletinBoard/BulletinBoard.DAL.csproj
@@ -12,4 +12,13 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BulletinBoard.Common\BulletinBoard.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DataAccess\Interfaces\" />
+    <Folder Include="Repositories\Interfaces\" />
+  </ItemGroup>
+
 </Project>
