--- a/BulletinBoard/appsettings.json
+++ b/BulletinBoard/appsettings.json
@@ -1,8 +1,19 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BulletinBoardDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "IdentityServer": {
+    "Clients": {
+      "AngularPresetCheck": {
+        "Profile": "IdentityServerSPA"
+      }
     }
   },
   "AllowedHosts": "*"
