скинул все сущности и сам DbContext в DAL, исправил пространства имен, сделал navbar более приятным глазу, переделал видимость ссылок navbar в зависимости от автаризации пользователя и админ он или нет

--- a/BulletinBoard/BulletinBoard.csproj
+++ b/BulletinBoard/BulletinBoard.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BulletinBoard.Common\BulletinBoard.Common.csproj" />
+    <ProjectReference Include="..\BulletinBoard.DAL\BulletinBoard.DAL.csproj" />
   </ItemGroup>
 
 </Project>
