подправил регистрацию (добавил возможность заранее ввести дополнительные данные), закинул в личный кабинет вывод своих объявлений, добавил удаление аккаунта и своих объявлений, подправил сущность picture теперь фото и есть поле для обозначения заглавного фото, пока работаю с загрузкой фото

--- a/BulletinBoard/appsettings.json
+++ b/BulletinBoard/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "CloudinarySettings": {
+    "CloudName": "bulletinboard"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BulletinBoard;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
