--- a/BulletinBoard/BulletinBoard.csproj
+++ b/BulletinBoard/BulletinBoard.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\BulletinBoard.DAL\BulletinBoard.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\Pictures\" />
+  </ItemGroup>
+
 </Project>
