подправил вывод на страницу плиток объявлений, изменил вывод категорий при различных разрешениях

--- a/BulletinBoard/.gitignore
+++ b/BulletinBoard/.gitignore
@@ -7,6 +7,10 @@
 *.userosscache
 *.sln.docstates
 
+
+Resources/Pictures/*.png
+Resources/Pictures/*.jpg
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
